Modelos añadidos y algunos bugs arreglados

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Claude files
 .claude
 iawot-plans/
-images/
-node_modules/
 templates/
+
+# Dependencias
+node_modules/
+
+# Imagenes de prueba
+images/
